# Vashisht_hackathon_25

./: .gitignore  README.md  package-lock.json  package.json  uxflow.md
Native/: README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Native/android/: settings.gradle
Native/android/app/: build.gradle
Native/app/: _layout.tsx  index.tsx  login.tsx  order1.tsx  order2.tsx  profile.tsx  signup.tsx
Native/app/(auth)/: _layout.tsx
Native/app/(tabs)/: _layout.tsx  index.tsx  items.tsx  profile.tsx
Native/config/: firebase.ts
Native/constants/: icons.ts
Native/context/: AuthContext.tsx  SessionContext.tsx
Native/ios/: Podfile
Native/ios/Native.xcodeproj/: project.pbxproj
backend/: main.py  pyproject.toml  requirements.txt
backend/routes/: __init__.py  dash.py  database.py  user_app.py
dashboard/: package-lock.json  package.json
dashboard/.next/: app-build-manifest.json  trace
dashboard/.next/cache/: .rscinfo
dashboard/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
dashboard/.next/server/app/: page.js  page_client-reference-manifest.js
dashboard/.next/server/vendor-chunks/: @firebase.js  @swc.js  firebase.js  idb.js  next.js  tslib.js
dashboard/.next/static/chunks/: app-pages-internals.js  webpack.js
dashboard/app/: layout.tsx  page.module.css  page.tsx
dashboard/app/components/: AuthModal.module.css  AuthModal.tsx
dashboard/app/context/: AuthContext.tsx
dashboard/app/protected/: page.tsx
(+15 files in other folders)
